01-nsxtpanel-app-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nsx-t-panel-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nsxtpanel
    spec:
      containers:
        - name: nsxtpanel
          image: hanymichael/single-express-react-nsxt-panel:v0.6
          ports:
            - name: nodejs-port
              containerPort: 3000
