02-K8s-Service-Option.yaml
apiVersion: v1
kind: Service
metadata:
  name: nsxtpanel-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: nsxtpanel
