nsxt-panel-app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nsx-t-panel-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nsxtpanel
    spec:
      containers:
        - name: nsxtpanel
          image: hanymichael/single-express-react-nsxt-panel:v0.6
          ports:
            - name: nodejs-port
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nsxtpanel-svc
spec:
  type: LoadBalancer
  ports:
    - port: 8090
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: nsxtpanel
