03-Network-Policy-Option.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nsxtpanel-np-default-deny
  namespace: nsxtpanel-app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nsxtpanel-v1-np-web
  namespace: nsxtpanel-app
spec:
  podSelector:
    matchLabels:
      app: nsxtpanel
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 3000
  egress:
    - ports:
        - protocol: TCP
          port: 443
